ui.frontend/src/main/webpack/wpi/components/wpi-alert/scss/styles/fidelity-wpi.scss
.fidelity-wpi-theme {
    padding: 24px;
    border: 1px solid #cccccc;
    border-radius: 8px;  
    
    .flex {
        margin-bottom: 0px !important;
        gap: 24px !important;

        .wpi-img {
            width: 100px;
            height: 100px;
        }
    }

    .provided {
        margin: 0;
        position: absolute;
        bottom: 24px;
        right: 24px;

        @media screen and (min-width: $sm) {
            margin: 0;
        }            

        .provided-by {
            position: relative;
            top: -2px;
            margin-right: 6px;
        }            
    }    
    
    .copy {

        h2 {
            font-size: rem(22);
            line-height: rem(24);
            font-weight: 700;
            color: black;
            font-family: "Fidelity Sans", Helvetica, sans-serif;
            margin-bottom: 16px;
        }
    
        h3 {
            font-family: "Fidelity Sans", Helvetica, sans-serif;
            font-size: rem(16);
            line-height: rem(19);
            color: black;
        }   
        
        p {
            margin-top: 8px;
            font-family: "Fidelity Sans", Helvetica, sans-serif;
            font-size: rem(14);
            line-height: 100%;
            color: black;
        }
    }
    
    .cmp-button--button-wpi {
        transition: $std-transition;
        .cmp-button {
            background-color: white;
            color: white;
            height: rem(36);
            border-radius: 8px;
            border: 1px solid #368727;
            color: #368727;
            transition: $std-transition;
            width: fit-content;
            padding: 8px 16px;
            text-align: center;
            text-decoration: none;
            margin: 0;

            @include flexbox(
                $align-items: center,
                $justify-content: center
            );
        
            &:hover, &:active {
                transition: $std-transition;
                text-decoration: none;
                cursor: pointer;
                color: #368727 !important;
                border: 1px solid #368727 !important;
            }
        
            .cmp-button__text {
                font-family: "Fidelity Sans", Helvetica, sans-serif;
                font-size: rem(16);
                line-height: 100%;
                font-weight: 700;
            }          
        }      
    }

    @media screen and (min-width: $sm) {
        .flex {
            -webkit-box-orient: vertical !important;
            -webkit-box-direction: normal !important;       
            -ms-flex-direction: column !important;      
            flex-direction: column !important;
        }
    }

    // @media screen and (min-width: ) {

    // }

    @media screen and (min-width: 866px) {
        .flex {
            flex-direction: row;
            -webkit-box-orient: horizontal;            
            -webkit-box-direction: normal;            
            -ms-flex-direction: row;            
            flex-direction: row;    

            .wpi-img {
                position: absolute;
            }

            .copy, .button {
                margin-left: 124px;
            }
            
            .button {
                position: relative;
                right: 8px;
            }
        }
    }
}

